--- a/Generator/Generator.csproj
+++ b/Generator/Generator.csproj
@@ -7,4 +7,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="SimpleExec" Version="11.0.0" />
+    </ItemGroup>
+
 </Project>
