--- a/HandlerTemplate/HandlerTemplate.csproj
+++ b/HandlerTemplate/HandlerTemplate.csproj
@@ -10,4 +10,6 @@
       <PackageReference Include="NServiceBus" Version="8.1.1" />
     </ItemGroup>
 
+    <Import Project="Includes.targets" />
+
 </Project>
