--- a/AssemblyScanningPerfHarness/Includes.targets
+++ b/AssemblyScanningPerfHarness/Includes.targets
@@ -1,4 +1,4 @@
-<Project>
+<Project Sdk="Microsoft.NET.Sdk">
     <ItemGroup>
         <ProjectReference Include="..\Dependency1\Dependency1.csproj" />
         <ProjectReference Include="..\Handler1\Handler1.csproj" />
