--- a/AssemblyScanningPerfHarness/AssemblyScanningPerfHarness.csproj
+++ b/AssemblyScanningPerfHarness/AssemblyScanningPerfHarness.csproj
@@ -11,4 +11,9 @@
       <PackageReference Include="NServiceBus" Version="8.1.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Dependency1\Dependency1.csproj" />
+      <ProjectReference Include="..\Handler1\Handler1.csproj" />
+    </ItemGroup>
+
 </Project>
