--- a/AssemblyScanningPerfHarness/AssemblyScanningPerfHarness.csproj
+++ b/AssemblyScanningPerfHarness/AssemblyScanningPerfHarness.csproj
@@ -6,6 +6,12 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
+  
+    <PropertyGroup>
+      <TieredCompilation>false</TieredCompilation>
+      <DebugSymbols>true</DebugSymbols>
+      <DebugType>pdbonly</DebugType>
+    </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="NServiceBus" Version="8.1.1" />
